# You must change these to your own details.
[package]
name = "tttod_data"
description = "To the Temple of Doom! Data"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
