# You must change these to your own details.
[package]
name = "to_the_temple_of_doom"
description = "To the Temple of Doom!"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
yew = "0.17"
yew-router = "0.14"
log = "0.4"
fern = "0.6"
rand = "0.7"
wee_alloc = "0.4"
tttod_data = { path = "../tttod_data" }
ybc = "0.1"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ws_stream_wasm = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["console", "HtmlElement", "KeyboardEvent"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1"
