[package]
name = "to_the_temple_of_doom"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1"
log = { version = "0.4.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log4rs = { version = "0.13", features = ["json_encoder"] }
structopt = "0.3"
url = "2.1"
snafu = { version = "0.6", features = [ "backtrace" ]}
